<resources>
    <string name="app_name">SquawkScope</string>
    <string name="screen_map">Map</string>
    <string name="screen_list">List</string>
    <string name="screen_settings">Settings</string>
    <string name="settings_title">Settings</string>
    <string name="map_section_title">Map</string>
    <string name="offline_section_title">Offline</string>
    <string name="servers_section_title">Servers</string>
    <string name="flightaware_section_title">FlightAware</string>
    <string name="app_section_title">App</string>
    <string name="map_provider_title">Map Tiles</string>
    <string name="map_provider_description">Tile source used for the map</string>
    <string name="tile_provider_openstreetmap">OpenStreetMap</string>
    <string name="tile_provider_carto_dark">CARTO Dark</string>
...
    <string name="tile_provider_cyclosm">CyclOSM</string>
    <string name="tile_provider_esri_satellite">ESRI Satellite</string>
    <string name="tile_provider_esri_topo">ESRI Topographic</string>
    <string name="tile_provider_esri_street">ESRI Street</string>
    <string name="servers_title">Servers</string>
    <string name="refresh_interval_title">Refresh Interval</string>
    <string name="center_map_on_user_title">Center map on user</string>
    <string name="center_map_on_user_description">Automatically center the map on your location when the app starts</string>
    <string name="restore_map_position_title">Restore map position</string>
    <string name="restore_map_position_description">Save and restore the last map position and zoom level on start</string>
    <string name="show_receiver_locations_title">Show receiver locations</string>
    <string name="show_receiver_locations_description">Display a marker for each configured server's location on the map</string>
    <string name="planes_count">%1$d planes</string>
    <string name="user_location_content_description">User Location</string>
    <string name="fit_to_aircraft">Fit map to aircraft</string>
    <string name="follow_aircraft">Follow</string>
    <string name="unfollow_aircraft">Unfollow</string>
...
    <string name="open_urls_externally_description">Open aircraft and receiver URLs in an external browser</string>
    <string name="enable_flightaware_api_title">Enable FlightAware API</string>
    <string name="enable_flightaware_api_description">Use the FlightAware API to get more information about flights</string>
    <string name="flightaware_api_key_title">FlightAware API Key</string>

    <!-- Server management -->
    <string name="server_dialog_add_title">Add Server</string>
    <string name="server_dialog_edit_title">Edit Server</string>
    <string name="server_dialog_name_label">Name</string>
    <string name="server_dialog_address_label">Address</string>
    <string name="server_dialog_name_required">Name is required</string>
    <string name="server_dialog_address_required">Address is required</string>
    <string name="server_dialog_cancel">Cancel</string>
    <string name="server_dialog_save">Save</string>
    <string name="server_dialog_type_label">Server Type</string>
    <string name="server_dialog_type_piaware">PiAware / dump1090</string>
    <string name="server_dialog_type_readsb">readsb</string>
    <string name="server_dialog_type_piaware_description">Standard local receiver</string>
    <string name="server_dialog_type_readsb_description">Alternative decoder with trace API support</string>
    <string name="server_add">Add server</string>
    <string name="server_edit">Edit server</string>
    <string name="server_delete">Delete server</string>
    <string name="server_delete_confirm_title">Delete Server</string>
    <string name="server_delete_confirm_message">Are you sure you want to delete "%1$s"?</string>
    <string name="server_delete_confirm">Delete</string>
    <string name="navigate_back">Back</string>

    <string name="flight_details_error">%1$s</string>
    <string name="flight_details_flight_number">Flight %1$s</string>
    <string name="flight_details_departure">Departure</string>
    <string name="flight_details_destination">Destination</string>
    <string name="flight_details_flight_progress">Flight progress</string>
...
    <string name="offline_maps_detail_status">Status</string>
    <string name="offline_maps_detail_zoom">Zoom levels</string>
    <string name="offline_maps_detail_tile_count">Tile count</string>
    <string name="offline_maps_detail_size">Size</string>
    <string name="offline_maps_detail_provider">Tile provider</string>
    <string name="offline_maps_detail_created">Created</string>
    <string name="zoom_default_title">Default Zoom</string>
    <string name="zoom_min_title">Min Zoom</string>
    <string name="zoom_max_title">Max Zoom</string>
    <string name="tile_provider_stadia_toner">Stadia Toner</string>
    <string name="tile_provider_stadia_watercolor">Stadia Watercolor</string>
    <string name="tile_provider_stadia_alidade_smooth">Stadia Alidade Smooth</string>
    <string name="tile_provider_stadia_alidade_dark">Stadia Alidade Dark</string>
    <string name="tile_provider_thunderforest_transport">Thunderforest Transport</string>
    <string name="tile_provider_thunderforest_cycle">Thunderforest Cycle</string>
...
